--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-firebase/app": "^18.3.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~49.0.8",
+    "expo-dev-client": "~2.4.8",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.3.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.72.4",
