--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
-    
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~49.0.8",
-    
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.3.1",
     "react": "18.2.0",
@@ -26,7 +24,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "^0.19.8",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "expo-updates": "~0.18.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
